Completed Hero Section

--- a/index.html
+++ b/index.html
@@ -16,5 +16,11 @@
             <li><a href="#Contact Us">Contact Us</a></li>
         </ul>
     </nav>
+
+    <div class="Hero-Section">
+        <h1 class="heading">This is the hero section</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores iusto accusamus deserunt, libero eos praesentium quibusdam vitae! A adipisci, vitae, ipsum quibusdam harum tempora neque sunt esse exercitationem sed voluptates recusandae reiciendis quis mollitia, in temporibus quae distinctio? Velit aut sed reiciendis rerum maiores voluptatum!</p>
+        <button>Read More</button>
+    </div>
 </body>
 </html>
