--- a/index.html
+++ b/index.html
@@ -1,26 +1,74 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Flexbox-Part 2</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
     <nav>
-        <div class="Logo">My Site</div>
-        <ul>
-            <li><a href="#home">Home</a></li>
-            <li><a href="#about">About</a></li>
-            <li><a href="#Services">Services</a></li>
-            <li><a href="#Contact Us">Contact Us</a></li>
-        </ul>
+      <div class="Logo">My Site</div>
+      <ul>
+        <li><a href="#home">Home</a></li>
+        <li><a href="#about">About</a></li>
+        <li><a href="#Services">Services</a></li>
+        <li><a href="#Contact Us">Contact Us</a></li>
+      </ul>
     </nav>
 
     <div class="Hero-Section">
-        <h1 class="heading">This is the hero section</h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores iusto accusamus deserunt, libero eos praesentium quibusdam vitae! A adipisci, vitae, ipsum quibusdam harum tempora neque sunt esse exercitationem sed voluptates recusandae reiciendis quis mollitia, in temporibus quae distinctio? Velit aut sed reiciendis rerum maiores voluptatum!</p>
-        <button>Read More</button>
+      <h1 class="heading">This is the hero section</h1>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores
+        iusto accusamus deserunt, libero eos praesentium quibusdam vitae! A
+        adipisci, vitae, ipsum quibusdam harum tempora neque sunt esse
+        exercitationem sed voluptates recusandae reiciendis quis mollitia, in
+        temporibus quae distinctio? Velit aut sed reiciendis rerum maiores
+        voluptatum!
+      </p>
+      <button>Read More</button>
     </div>
-</body>
+
+    <h2 class="heading">Our Services</h2>
+    <div class="Services-Card">
+      <div class="Card">
+          <div class="image"><img src="images/Mountain.jpg" alt="mountain"></div>
+          <h3>Mountains</h3>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt,
+            earum deleniti. Consectetur.
+          </p>
+          <button>Read More</button>
+        </div>
+        <div class="Card">
+            <div class="image"><img src="images/Mountain.jpg" alt="mountain"></div>
+            <h3>Mountains</h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt,
+              earum deleniti. Consectetur.
+            </p>
+            <button>Read More</button>
+          </div>
+          <div class="Card">
+            <div class="image"><img src="images/Mountain.jpg" alt="mountain"></div>
+            <h3>Mountains</h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt,
+              earum deleniti. Consectetur.
+            </p>
+            <button>Read More</button>
+          </div>
+          <div class="Card">
+              <div class="image"><img src="images/Mountain.jpg" alt="mountain"></div>
+              <h3>Mountains</h3>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt,
+                earum deleniti. Consectetur.
+              </p>
+              <button>Read More</button>
+            </div>
+      </div>
+    </div>
+  </body>
 </html>
